[gd_scene load_steps=13 format=3 uid="uid://cb5i0x0mu2ped"]

[ext_resource type="Script" path="res://World/src/Generator/MapGenerator.gd" id="1_aqgwl"]
[ext_resource type="TileSet" uid="uid://dmxk6mov2niyb" path="res://World/tilesets/TerrainTileSet.tres" id="2_27l2y"]
[ext_resource type="Script" path="res://World/src/Generator/HeightmapGenerator.gd" id="2_yoysw"]
[ext_resource type="Script" path="res://World/src/Generator/RainfallGenerator.gd" id="3_1gd7e"]
[ext_resource type="TileSet" uid="uid://b3cv5516t3sy3" path="res://World/tilesets/DestructibleTileset.tres" id="3_rhnhr"]
[ext_resource type="Script" path="res://World/src/Generator/BiomeGenerator.gd" id="5_5baa4"]
[ext_resource type="Script" path="res://World/src/Generator/TreeGenerator.gd" id="6_165s7"]
[ext_resource type="Script" path="res://World/src/Generator/TerrainGenerator.gd" id="6_r6hy4"]
[ext_resource type="Script" path="res://World/src/TerrainInstantiator.gd" id="7_vqu7g"]
[ext_resource type="Script" path="res://World/src/NavigationManager.gd" id="7_x6j0q"]
[ext_resource type="PackedScene" uid="uid://bnqrolr6i6i47" path="res://World/src/Buildings/cabin.tscn" id="10_dhclr"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_xogl4"]
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Map" type="Node2D"]

[node name="MapGenerator" type="Node2D" parent="." node_paths=PackedStringArray("generator_modules", "instantiator_modules")]
script = ExtResource("1_aqgwl")
generator_modules = [NodePath("GeneratorModules/HeightmapGenerator"), NodePath("GeneratorModules/RainfallGenerator"), NodePath("GeneratorModules/BiomeGenerator"), NodePath("GeneratorModules/TerrainGenerator"), NodePath("GeneratorModules/TreeGenerator")]
instantiator_modules = [NodePath("InstantiatorModules/TerrainInstantiator")]

[node name="GeneratorModules" type="Node" parent="MapGenerator"]

[node name="HeightmapGenerator" type="Node" parent="MapGenerator/GeneratorModules"]
script = ExtResource("2_yoysw")

[node name="RainfallGenerator" type="Node" parent="MapGenerator/GeneratorModules"]
script = ExtResource("3_1gd7e")

[node name="BiomeGenerator" type="Node" parent="MapGenerator/GeneratorModules"]
script = ExtResource("5_5baa4")

[node name="TerrainGenerator" type="Node" parent="MapGenerator/GeneratorModules"]
script = ExtResource("6_r6hy4")

[node name="TreeGenerator" type="Node" parent="MapGenerator/GeneratorModules"]
script = ExtResource("6_165s7")

[node name="InstantiatorModules" type="Node" parent="MapGenerator"]

[node name="TerrainInstantiator" type="Node" parent="MapGenerator/InstantiatorModules"]
script = ExtResource("7_vqu7g")

[node name="TilemapNavigationManager" type="NavigationRegion2D" parent="."]
top_level = true
navigation_polygon = SubResource("NavigationPolygon_xogl4")
script = ExtResource("7_x6j0q")

[node name="Tilemaps" type="Node2D" parent="."]
y_sort_enabled = true

[node name="TerrainTilemap" type="TileMap" parent="Tilemaps"]
z_index = -2
texture_filter = 1
tile_set = ExtResource("2_27l2y")
rendering_quadrant_size = 32
format = 2
layer_0/name = "Terrain"
layer_0/navigation_enabled = false

[node name="DestructibleTilemap" type="TileMap" parent="Tilemaps"]
light_mask = 2
visibility_layer = 2
y_sort_enabled = true
tile_set = ExtResource("3_rhnhr")
rendering_quadrant_size = 32
format = 2
layer_0/name = "Trees"
layer_0/y_sort_enabled = true
layer_0/navigation_enabled = false

[node name="BuildingContainer" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Cabin" parent="BuildingContainer" instance=ExtResource("10_dhclr")]
position = Vector2(479, 600)

[node name="CollisionPolygon2D" parent="BuildingContainer/Cabin/InteriorArea2D" index="0"]
polygon = PackedVector2Array(-311, 259, -311, -271, 313, -271, 313, 259)

[node name="ExteriorSprite" parent="BuildingContainer/Cabin" index="2"]
visible = false

[node name="NavigationObstacle2D" parent="BuildingContainer/Cabin" index="5"]
process_mode = 4
avoidance_enabled = false

[connection signal="instantiation_complete" from="MapGenerator" to="TilemapNavigationManager" method="_on_map_generator_instantiation_complete"]
[connection signal="child_entered_tree" from="MapGenerator/GeneratorModules" to="MapGenerator" method="_on_modules_child_entered_tree"]
[connection signal="child_exiting_tree" from="MapGenerator/GeneratorModules" to="MapGenerator" method="_on_modules_child_exiting_tree"]
[connection signal="child_order_changed" from="MapGenerator/GeneratorModules" to="MapGenerator" method="_on_modules_child_order_changed"]

[editable path="BuildingContainer/Cabin"]
